1.7.1
-----
1. Use rgba colormap to draw rounded tooltips and popup menus - gives nicer border.
2. Allow 'menus' of non-editable combos to be rounded. (But *only* if the app can
   be set to use an rgba colormap)
3. Remove resize grips - kwin handles this.
4. Add mouse tracking to treeview lists.
5. Indent treeview selection as per KDE

1.7.0
-----
 1. Add option to use tiled pixmap as background for windows and menus.
 2. Draw line focus for items that cannot use glow focus.
 3. Use popup menu gradient's border setting to determine border type of menus.
 4. Add option to draw standard, raised, or joined toolbar buttons.
 5. Add option to use thinner frames, focus, etc.
 6. If not rounding, enable all 'square' options.
 7. Store background colour setting in XProperty - so that this can be used by
    QtCurve kwin decoration. (At the moment, this is just the palette background)
 8. Add position setting for background image; top left, top middle, top right,
    bottom left, bottom middle, bottom right, left middle, right middle, and centred.
 9. Use square tooltips by default. (Problems have been reported with Pidgin and
    rounded tooltip - but I cannot reproduce these!)
10. Fix combo-box menu text when shading popup menus.
11. Fix reading of QtCurve supplied default kdeglobals file.
12. Fix rounding of troughs of progressbars within treeview.
13. When using glow focus, dont draw glow focus and line focus on button of editable
    combo - jsut draw line.
14. Improve background gradient performance - only re-draw on size-request if size
    is different from last time.
15. Dont overwrite user supplied CMAKE_INSTALL_PREFIX
16. OpenOffice.org fixes:
        - toolbar buttons when using max rounded buttons.
        - vertical scrollbar button detection
        - background of unified spin widgets and combos

1.6.4
-----
1. Fix Claws Mail listview headers.
2. When drawing text on an option menu, look deeper into parent heirarchy to