@@ -65,11 +65,8 @@ typedef struct
     GtkStyle parent_instance;
     GdkColor *button_text[2],
              *menutext[2];
-#if !GTK_CHECK_VERSION(2, 90, 0)
-    GdkGC    *lv_lines_gc;
-#ifndef QTC_USE_CAIRO_FOR_ARROWS
+#if !GTK_CHECK_VERSION(2, 90, 0) && !defined QTC_USE_CAIRO_FOR_ARROWS
     GdkGC   *arrow_gc;
-#endif
 #endif
 } QtCurveStyle;
 
