@@ -5,7 +5,9 @@
    be set to use an rgba colormap)
 3. Remove resize grips - kwin handles this.
 4. Add mouse tracking to treeview lists.
-5. Indent treeview selection as per KDE
+5. Indent treeview selection as per KDE.
+6. Dont use GtkStyle to draw treeview lines. Use custom code which matches previous
+   KDE 'old' style.
 
 1.7.0
 -----
